--- a/HomePage.html
+++ b/HomePage.html
@@ -7,6 +7,9 @@
       <a href = '#'> Contact | </a>
     </nav>
     <h1>My Learning Git Homepage</h1>
-    <p>This is the paragraphwritten for my UECS2363 first practical on Git and Gihub.</p>
+    <h3>Introducing Git and Github</h3>
+  
+    <p>This is the paragraph written for my UECS2363 first practical on Git and Gihub.</p>
+    <p>This is the second paragraph written for second commit</p>
   </body>
 </html>
